--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-src/lib/firebase.ts
-src/app/edit
+firebase.ts
+src/app/edit/[id]/page.tsx
 src/components/create/kanji-lists.json
